Modifications de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mon Portfolio</title>
+</head>
+<body>
+    <h1>Bienvenue sur mon Portfolio</h1>
+    <p>C'est ici que je vais présenter mes compétences et mes réalisations.</p>
+</body>
+</html>
