Ajout de mes compétences et de mes projets

--- a/index.html
+++ b/index.html
@@ -8,5 +8,26 @@
 <body>
     <h1>Bienvenue sur mon Portfolio</h1>
     <p>C'est ici que je vais présenter mes compétences et mes réalisations.</p>
+    <h2>Mes Compétences</h2>
+    <ul>
+        <li>Intégration continue et déploiement (CI/CD)</li>
+        <li>Conception d'API et intégration</li>
+        <li>Gestion de bases de données</li>
+        <li>Développement orienté cloud et gestion d'identités</li>
+        <li>Réseau et configuration</li>
+        <li>Scripting et automatisation</li>
+        <li>Gestion de projet</li>
+        <li>Sécurité et compliance</li>
+    </ul>
+    <h2>Mes Projets</h2>
+    <ul>
+        <li>
+            <h3>Projet 1</h3>
+            <p>Déploiement d'un site web statique utilisant Nginx dans un conteneur Docker.</p>
+            <a href="https://github.com/Binetou1996/webapp.git">Voir le projet</a>
+        </li>
+    </ul>
+    
+
 </body>
 </html>
