Ajout de mes expériences professionnelles, formations et contacts

--- a/index.html
+++ b/index.html
@@ -27,7 +27,55 @@
             <a href="https://github.com/Binetou1996/webapp.git">Voir le projet</a>
         </li>
     </ul>
-    
+    <h2>Expérience Professionnelle</h2>
+    <p>DARAMIC | Juillet 2023 - Décembre 2023</p>
+    <p>DEVOPS ENGINEER</p>
+    <ul>
+        <li>Intégration du DevSecOps pour l'analyse statique de code dans des pipelines dedéploiement continu.</li>
+        <li>Conception et mise en oeuvre d'un Bus de données (ESB) en utilisant un framework web moderne et l'intégration avec des APIs de gestion de services.</li>
+        <li>Optimisation et amélioration des scripts, avec mise en place de tests automatisés.</li>
+    </ul>
+    <p>MERCK GROUP | Septembre 2022 - Février 2023</p>
+    <p>STAGIAIRE INGÉNIEURE AMÉLIORATION CONTINUE</p>
+    <p>Participation à des projets de développement et d’amélioration d'outils informatiques de pilotage de la performance dans un domaine industriel, d'indicateurs de suivi de laperformance des process de l'usine et à ce titre j’ai contribué :</p>
+    <ul>
+        <li>à la rédaction de cahiers des charges</li>
+        <li>à la digitalisation du suivi du TRG usine</li>
+        <li>au développement de standards usine et à la mise sous contrôle des nouveaux outils (formation, …)</li>
+    </ul>
+    <p>FAURECIA-CENTRE R&D | Février 2021 - Juillet 2021</p>
+    <p>STAGIAIRE GESTION TECHNIQUE CENTRALISÉE</p>
+    <ul>
+        <li>Créer des tableaux de bord pour visualiser la situation des automatismes du site</li>
+        <li>Réalisation de scripts avec ScadaBR pour arrêter la climatisation</li>
+        <li>Migration de ScadaBR vers ScadaLTS</li>
+        <li>Optimiser la vitesse de l'application sur base MySQL</li>
+    </ul>
+    <p>AWALEBIZ | Mars 2019 - Septembre 2019</p>
+    <p>WEBMASTER JUNIOR</p>
+    <ul>
+        <li>Chargée des parutions d'images des produits mis en ligne</li>
+        <li>Étude comparative des offres de livraison et optimisation des coûts</li>
+        <li>Création compte utilisateurs et gestions des droits accès</li>
+    </ul>
+    <p>TRÉSOR PUBLIC SÉNÉGAL | Mai 2018 - Octobre 2018</p>
+    <p>STAGIAIRE DÉVELOPPEUR ET ASSISTANT FONCTIONNEL SI</p>
+    <ul>
+        <li>Analyse et mise en oeuvre des demandes d'évolutions d'outils informatiques</li>
+        <li>Paramétrage fonctionnel des applications</li>
+        <li>Conception et réalisation d’un prototype d’une solution de suivi des paiements des fournisseurs de l'État</li>
+    </ul>
+    <h2>Formation Académique</h2>
+    <p>Université de Technologie de Belfort Montbéliard | 2023</p>
+    <p>Diplôme Ingénieur en Informatique</p>
+    <p>Eazytraining | 2023</p>
+    <p>Bootcamp Devops</p>
+    <p>École Supérieure Multinationale des Télécommunications | 2018</p>
+    <p>Licence en Télécommunicationset Informatique</p>
+
+    <h2>Contact</h2>
+    <p>E-mail : fatou.gueye@utbm.fr</p>
+    <p>LinkedIn : <a href="https://www.linkedin.com/in/binetou">Profil LinkedIn</a></p>
 
 </body>
 </html>
