Changement du balise de titre des noms d'entreprise et d'école en H3

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         </li>
     </ul>
     <h2>Expérience Professionnelle</h2>
-    <p>DARAMIC | Juillet 2023 - Décembre 2023</p>
+    <h3>DARAMIC | Juillet 2023 - Décembre 2023</h3>
     <p>DEVOPS ENGINEER</p>
     <ul>
         <li>Intégration du DevSecOps pour l'analyse statique de code dans des pipelines dedéploiement continu.</li>
         <li>Conception et mise en oeuvre d'un Bus de données (ESB) en utilisant un framework web moderne et l'intégration avec des APIs de gestion de services.</li>
         <li>Optimisation et amélioration des scripts, avec mise en place de tests automatisés.</li>
     </ul>
-    <p>MERCK GROUP | Septembre 2022 - Février 2023</p>
+    <h3>MERCK GROUP | Septembre 2022 - Février 2023</h3>
     <p>STAGIAIRE INGÉNIEURE AMÉLIORATION CONTINUE</p>
     <p>Participation à des projets de développement et d’amélioration d'outils informatiques de pilotage de la performance dans un domaine industriel, d'indicateurs de suivi de laperformance des process de l'usine et à ce titre j’ai contribué :</p>
     <ul>
@@ -44,7 +44,7 @@
         <li>à la digitalisation du suivi du TRG usine</li>
         <li>au développement de standards usine et à la mise sous contrôle des nouveaux outils (formation, …)</li>
     </ul>
-    <p>FAURECIA-CENTRE R&D | Février 2021 - Juillet 2021</p>
+    <h3>FAURECIA-CENTRE R&D | Février 2021 - Juillet 2021</h3>
     <p>STAGIAIRE GESTION TECHNIQUE CENTRALISÉE</p>
     <ul>
         <li>Créer des tableaux de bord pour visualiser la situation des automatismes du site</li>
@@ -52,14 +52,14 @@
         <li>Migration de ScadaBR vers ScadaLTS</li>
         <li>Optimiser la vitesse de l'application sur base MySQL</li>
     </ul>
-    <p>AWALEBIZ | Mars 2019 - Septembre 2019</p>
+    <h3>AWALEBIZ | Mars 2019 - Septembre 2019</h3>
     <p>WEBMASTER JUNIOR</p>
     <ul>
         <li>Chargée des parutions d'images des produits mis en ligne</li>
         <li>Étude comparative des offres de livraison et optimisation des coûts</li>
         <li>Création compte utilisateurs et gestions des droits accès</li>
     </ul>
-    <p>TRÉSOR PUBLIC SÉNÉGAL | Mai 2018 - Octobre 2018</p>
+    <h3>TRÉSOR PUBLIC SÉNÉGAL | Mai 2018 - Octobre 2018</h3>
     <p>STAGIAIRE DÉVELOPPEUR ET ASSISTANT FONCTIONNEL SI</p>
     <ul>
         <li>Analyse et mise en oeuvre des demandes d'évolutions d'outils informatiques</li>
@@ -67,11 +67,11 @@
         <li>Conception et réalisation d’un prototype d’une solution de suivi des paiements des fournisseurs de l'État</li>
     </ul>
     <h2>Formation Académique</h2>
-    <p>Université de Technologie de Belfort Montbéliard | 2023</p>
+    <h3>Université de Technologie de Belfort Montbéliard | 2023</h3>
     <p>Diplôme Ingénieur en Informatique</p>
-    <p>Eazytraining | 2023</p>
+    <h3>Eazytraining | 2023</h3>
     <p>Bootcamp Devops</p>
-    <p>École Supérieure Multinationale des Télécommunications | 2018</p>
+    <h3>École Supérieure Multinationale des Télécommunications | 2018</h3>
     <p>Licence en Télécommunicationset Informatique</p>
 
     <h2>Contact</h2>
