Ajout d'images profil et logo entreprise avec leur css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Bienvenue sur mon Portfolio</h1>
+    <img src="images/profil.jpg" alt="Ma Photo de Profil">
     <p>C'est ici que je vais présenter mes compétences et mes réalisations.</p>
     <h2>Mes Compétences</h2>
     <ul>
@@ -30,6 +31,7 @@
     </ul>
     <h2>Expérience Professionnelle</h2>
     <h3>DARAMIC | Juillet 2023 - Décembre 2023</h3>
+    <img src="images/daramic.png" alt="DARAMIC logo">
     <p>DEVOPS ENGINEER</p>
     <ul>
         <li>Intégration du DevSecOps pour l'analyse statique de code dans des pipelines dedéploiement continu.</li>
@@ -37,6 +39,7 @@
         <li>Optimisation et amélioration des scripts, avec mise en place de tests automatisés.</li>
     </ul>
     <h3>MERCK GROUP | Septembre 2022 - Février 2023</h3>
+    <img src="images/merck.jpg" alt="MERCK logo">
     <p>STAGIAIRE INGÉNIEURE AMÉLIORATION CONTINUE</p>
     <p>Participation à des projets de développement et d’amélioration d'outils informatiques de pilotage de la performance dans un domaine industriel, d'indicateurs de suivi de laperformance des process de l'usine et à ce titre j’ai contribué :</p>
     <ul>
@@ -45,6 +48,7 @@
         <li>au développement de standards usine et à la mise sous contrôle des nouveaux outils (formation, …)</li>
     </ul>
     <h3>FAURECIA-CENTRE R&D | Février 2021 - Juillet 2021</h3>
+    <img src="images/faurecia.png" alt="FAURECIA-CENTRE logo">
     <p>STAGIAIRE GESTION TECHNIQUE CENTRALISÉE</p>
     <ul>
         <li>Créer des tableaux de bord pour visualiser la situation des automatismes du site</li>
@@ -53,6 +57,7 @@
         <li>Optimiser la vitesse de l'application sur base MySQL</li>
     </ul>
     <h3>AWALEBIZ | Mars 2019 - Septembre 2019</h3>
+    <img src="images/awalebiz.png" alt="AWALEBIZ logo">
     <p>WEBMASTER JUNIOR</p>
     <ul>
         <li>Chargée des parutions d'images des produits mis en ligne</li>
@@ -60,6 +65,7 @@
         <li>Création compte utilisateurs et gestions des droits accès</li>
     </ul>
     <h3>TRÉSOR PUBLIC SÉNÉGAL | Mai 2018 - Octobre 2018</h3>
+    <img src="images/tresor.png" alt="Tresor public logo">
     <p>STAGIAIRE DÉVELOPPEUR ET ASSISTANT FONCTIONNEL SI</p>
     <ul>
         <li>Analyse et mise en oeuvre des demandes d'évolutions d'outils informatiques</li>
