--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Bienvenue sur mon Portfolio</h1>
     <img src="images/profil.jpg" alt="Ma Photo de Profil">
-    <p>C'est ici que je vais présenter mes compétences et mes réalisations.</p>
+    <p class="section-after-profile">C'est ici que je vais présenter mes compétences et mes réalisations.</p>
     <h2>Mes Compétences</h2>
     <ul>
         <li>Intégration continue et déploiement (CI/CD)</li>
