Ajout du lien vers le contact mail

--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
     <p>Licence en Télécommunicationset Informatique</p>
 
     <h2>Contact</h2>
-    <p>E-mail : fatou.gueye@utbm.fr</p>
+    <p>E-mail : <a href="mailto:fatou.gueye@utbm.fr">fatou.gueye@utbm.fr</a></p>
     <p>LinkedIn : <a href="https://www.linkedin.com/in/binetou">Profil LinkedIn</a></p>
+    
+
 
 </body>
 </html>
